style(Admin_Comp): fix admin adaptive on mobile

--- a/src/app/components/admin/admin.component.scss
+++ b/src/app/components/admin/admin.component.scss
@@ -4,7 +4,6 @@
 .admin {
   &__container {
     margin: 20px auto 0 auto;
-    width: 100%;
     max-width: 1090px;
     display: flex;
     flex-direction: column;
